--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Usuario</title>
+    <title>Cadastro de Usuario ONG</title>
 </head>
 <body>
     <header>
@@ -16,5 +16,33 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <h2>Quem Somos?</h2>
+            <p>Somos uma organização sem fins lucrativos, que atua com animais abandonados</p>
+        </section>
+
+        <section>
+            <h2>Missão da ONG Amicão</h2>
+            <p>Promover o cuidado e realocar os animais para doação</p>
+        </section>
+
+        <section> 
+            <h2>Contatos:</h2>
+            <address>
+                <p>Endereço: Rua das Aves, 354 - Santa Cruz]</p>
+                <p>Telefone: (11) 9 9540-0045</p>
+                <p>Email: Amicaodobem@gurgel.com</p>
+
+               
+            </address>
+        </section>
+    
+
+
+    </main>
+    <footer>
+        <p>&copy; 2025 ONG Amicão</p>
+    </footer>
 </body>
 </html>
